--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,38 @@ body {
   background-color: #ffffff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 }
 
 ul {
   list-style-type: none;
+  padding-left: 0;
+  margin: 0;
 }
 
 button {
   cursor: pointer;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  padding: 0 15px;
+  width: 1158px;
+  margin: 0 auto;
 }
 
 .item-title {
@@ -43,7 +65,22 @@ button {
 /* general classes end */
 
 /* header-styles stars*/
-.logo {
+
+.header {
+}
+
+.header .container {
+  display: flex;
+  gap: 332px;
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header .navigation {
+  display: flex;
+  align-items: center;
+}
+
+.header .navigation .logo {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
   font-size: 18px;
@@ -51,44 +88,61 @@ button {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+
+  margin-right: 76px;
 }
 
 .logo > .logo-span {
   color: #2e2f42;
 }
 
-nav .navigation-pages {
+nav .nav-menu {
   color: #2e2f42;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+
+  display: flex;
+  gap: 40px;
 }
 
-nav .navigation-pages .page-link {
+nav .nav-menu .page-link {
   color: #2e2f42;
   letter-spacing: 0.02em;
 }
 
-nav .navigation-pages .page-link:hover,
-nav .navigation-pages .page-link:focus,
-nav .navigation-pages .page-link:active {
+.navigation .nav-menu .nav-item {
+  padding: 24px 0;
+}
+
+nav .nav-menu .page-link:hover,
+nav .nav-menu .page-link:focus,
+nav .nav-menu .page-link:active {
   color: #404bbf;
 }
 
-.company-contacts {
+.header .company-contacts {
   font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+
+  display: flex;
+  align-items: center;
 }
 
-.company-contacts .contact {
+.company-contacts .contacts-menu {
+  display: flex;
+  gap: 40px;
+}
+
+.company-contacts .contacts-menu .contact {
   color: #434455;
 }
 
-.company-contacts .contact:hover,
-.company-contacts .contact:focus {
+.company-contacts .contacts-menu .contact:hover,
+.company-contacts .contacts-menu .contact:focus {
   color: #404bbf;
 }
 
