fixed mistakes in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,12 +67,12 @@ img {
 /* header-styles stars*/
 
 .header {
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header .container {
   display: flex;
   gap: 332px;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .header .navigation {
@@ -112,7 +112,7 @@ nav .nav-menu .page-link {
   letter-spacing: 0.02em;
 }
 
-.navigation .nav-menu .nav-item {
+.navigation .nav-menu {
   padding: 24px 0;
 }
 
