fixed errors in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ nav .nav-menu .page-link {
   letter-spacing: 0.02em;
 }
 
-.navigation .nav-menu {
+.navigation .nav-menu .nav-item {
   padding: 24px 0;
 }
 
