--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,8 @@ ul {
 
 button {
   cursor: pointer;
+  display: block;
+  border: none;
 }
 
 img {
@@ -112,8 +114,9 @@ nav .nav-menu .page-link {
   letter-spacing: 0.02em;
 }
 
-.navigation .nav-menu .nav-item {
+.navigation .nav-menu .nav-item > .page-link {
   padding: 24px 0;
+  display: block;
 }
 
 nav .nav-menu .page-link:hover,
@@ -150,6 +153,7 @@ nav .nav-menu .page-link:active {
 /* introduction-section */
 .introduction-section {
   background-color: #2e2f42;
+  padding: 188px 0;
 }
 
 .introduction-section .page-title {
@@ -158,7 +162,9 @@ nav .nav-menu .page-link:active {
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #ffffff;
-  text-align: center;
+
+  margin: 0 auto;
+  max-width: 496px;
 }
 
 .introduction-section .order-service-button {
@@ -167,7 +173,12 @@ nav .nav-menu .page-link:active {
   line-height: 1.5;
   letter-spacing: 0.04em;
   background-color: #4d5ae5;
+  border-radius: 4px;
   color: #ffffff;
+
+  min-width: 169px;
+  height: 56px;
+  margin: 48px auto 0;
 }
 
 .introduction-section .order-service-button:hover,
