--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ img {
   align-items: center;
 }
 
-.header .navigation .logo {
+.logo {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
   font-size: 18px;
@@ -266,31 +266,52 @@ nav .nav-menu .page-link:active {
 
 /* portfolio section */
 
-.portfolio-section {
+.portfolio.section {
 }
 
-.project-card {
+.portfolio.section .projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.portfolio.section .project.card {
+  width: calc((100% -3 * 24px) / 3);
 }
 
-.portfolio-section .section-main-title {
+.portfolio.section .section-main-title {
   text-align: center;
+  margin-bottom: 72px;
 }
 
-.portfolio-section .project-card {
+.portfolio.section .project-card .project-preview {
 }
 
-.project-card .project-preview {
+.portfolio.section .project-card .project-description {
+  padding: 32px 0 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.portfolio.section .project-card .project-description .item-title {
+  margin-bottom: 8px;
 }
 
 /* footer*/
-.footer {
+.footer.section {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
-.footer .item-text {
+.footer.section .logo {
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+.footer.section .logo > span {
   color: #f4f4fd;
 }
 
-.footer .logo > .logo-span {
+.footer.section .item-text {
+  max-width: 264px;
   color: #f4f4fd;
 }
