--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,7 @@ nav .nav-menu .page-link:active {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+  row-gap: 48px;
 }
 .portfolio.section .project.card {
   width: calc((100% -3 * 24px) / 3);
@@ -287,7 +288,7 @@ nav .nav-menu .page-link:active {
 }
 
 .portfolio.section .project-card .project-description {
-  padding: 32px 0 32px 16px;
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
